gui: add examples loader
